# comfy-service-tests

./: .dockerignore  .gitignore  Changelog.md  README.md  ROADMAP.md  TESTING.md  architecture.md  buf.gen.yaml  docker-compose.yml  go.mod  go.sum  main.py  model_locations.md  pyproject.toml
.vibe/: CONSTRAINTS.md  DECISIONS.md  Design.md  GOALS.md  LESSONS_LEARNED.md  QUESTIONS.md  README.md
cmd/gateway/: main.go
cmd/orchestrator/: main.go
cmd/stage-sampler/: main.go
internal/imaging/: fallback.go  fallback_test.go  imagick.go  renderer.go  util.go  util_test.go
internal/logging/: logging.go
internal/orchestrator/: server.go  server_test.go  workflow.go  workflow_test.go
internal/proto/orchestratorv1/: orchestrator.pb.go  orchestrator_grpc.pb.go
proto/: orchestrator.proto
scripts/: setup_colima.sh  sync_comfyui_frontend.sh  sync_models.sh  test.sh
scripts/vllm/: run_qwen_2_5_vl_7b_fp8.sh
services/gateway/: Dockerfile
services/orchestrator/: Dockerfile
services/stage-sampler/: Dockerfile  app.py  app_core.py  healthcheck.py  requirements.txt
services/stage-sampler/tests/: test_app_core.py
ui/: index.html
ui/css/: app.css
ui/js/: app.js  nodes.js
ui/tests/: nodes.test.js
ui/workflows/: default.json
